# polybot2

./: .gitignore  AGENTS.md  AUDIT_REPORT.md  CLAUDE.md  LATENCY.md  LATENCY_AUDIT.md  README.md  SESSION_HANDOFF.md  TERMINAL_COMMANDS.md  bootstrap_polybot2_al2023.sh  capture_dual_soccer.py  games_05_10.json  hotpath_1_20260427T221017Z.jsonl  hotpath_1_20260509T153005Z.jsonl  hotpath_1_20260509T154212Z.jsonl  hotpath_1_20260509T180832Z.jsonl  hotpath_1_20260509T210336Z.jsonl  hotpath_1_20260517T165602Z.jsonl  hotpath_1_20260517T170232Z.jsonl  hotpath_1_20260517T170301Z.jsonl  hotpath_2_20260512T195413Z.jsonl  hotpath_2_20260512T202037Z.jsonl  hotpath_2_20260512T203518Z.jsonl  hotpath_2_20260512T203839Z.jsonl  hotpath_3_20260426T194948Z.jsonl  new_session_correctness_audit.md  pure_latency_audit_l46.md  pyproject.toml  review.md
.claude/: settings.json
config/: baseball_mappings.py  live_trading.py  mappings.py  soccer_mappings.py
native/polybot2_native/: BENCHMARKS.md  Cargo.toml  README.md
native/polybot2_native/benches/: hotpath.rs
native/polybot2_native/src/: bench_support.rs  boltodds_frame_pipeline.rs  boltodds_types.rs  decode.rs  engine.rs  eval.rs  fast_extract.rs  kalstrop_types.rs  kalstrop_v2_frame_pipeline.rs  kalstrop_v2_sio.rs  kalstrop_v2_types.rs  lib.rs  log_writer.rs  parse.rs  parse_common.rs  replay.rs  runtime.rs  telemetry.rs  ws.rs  ws_boltodds.rs  ws_kalstrop_v2.rs  ws_multiplexed.rs
native/polybot2_native/src/baseball/: engine.rs  eval.rs  frame_pipeline.rs  mod.rs  parse.rs  types.rs
native/polybot2_native/src/dispatch/: events.rs  fast_submit_client.rs  flow.rs  mod.rs  presign_pool.rs  sdk_exec.rs  submitter.rs  tests.rs  types.rs
native/polybot2_native/src/soccer/: engine.rs  eval.rs  frame_pipeline.rs  parse.rs  types.rs
scripts/: baseball_05_11.json  build_capture_plan.py  capture_boltodds.py  capture_kalstrop_v1.py  capture_kalstrop_v2.py  capture_multi.py  capture_opta.py  compare_baseball_latency.py  games.json  (+7 more)
(+100 files in other folders)
