[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "polybot2"
version = "0.1.0"
description = "Polymarket + provider deterministic linking, execution, and hotpath"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.25",
    "polars>=1.0",
    "pyarrow>=15.0",
    "tqdm>=4.65",
    "python-dotenv>=1.0",
    "websockets>=12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.21",
    "maturin>=1.6",
]

[project.scripts]
polybot2 = "polybot2.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["polybot2*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
markers = [
    "live: real-network validation tests",
]

[tool.maturin]
manifest-path = "native/polybot2_native/Cargo.toml"
module-name = "polybot2_native"
