[package]
name = "polybot2_native"
version = "0.1.0"
edition = "2021"

[lib]
name = "polybot2_native"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module", "abi3-py311"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
tokio = { version = "1", features = ["rt", "sync", "time"] }
tokio-tungstenite = { version = "0.24", default-features = false, features = ["connect", "rustls-tls-native-roots"] }
futures-util = "0.3"
urlencoding = "2.1"
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }
polymarket-client-sdk = { version = "0.4.4", features = ["clob"] }
alloy = { version = "=1.6.3", default-features = false, features = ["signers"] }
rustls = { version = "0.23", default-features = false, features = ["std", "aws-lc-rs"] }
